--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,7 +30,6 @@
         -webkit-box-flex: 1;
             -ms-flex-positive: 1;
                 flex-grow: 1;
-        background: transparent;
         border: none;
         background: white;
         margin: 1vw;
@@ -79,7 +78,7 @@
             -ms-flex-item-align: center;
                 align-self: center;
             margin: 0 1vw; }
-          .wrap .todo-main-list li .view label {
+          .wrap .todo-main-list li .view .todo-content {
             -webkit-box-flex: 1;
                 -ms-flex-positive: 1;
                     flex-grow: 1;
@@ -107,6 +106,35 @@
           pointer-events: none; }
     .wrap .todo-footer {
       background-color: #e6e6e6;
-      padding: .25vw; }
+      padding: 0; }
+      .wrap .todo-footer .sorting {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
+        .wrap .todo-footer .sorting button {
+          width: 50%;
+          padding: 0;
+          margin: 0;
+          border: none;
+          background: transparent;
+          border-right: 1px solid grey;
+          border-bottom: 1px solid grey;
+          margin: -1px; }
+          .wrap .todo-footer .sorting button:hover {
+            background-color: grey; }
+          .wrap .todo-footer .sorting button:last-of-type {
+            border-right: none; }
+      .wrap .todo-footer button {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        border: none;
+        background: transparent;
+        border-bottom: 1px solid grey; }
+        .wrap .todo-footer button:hover {
+          background-color: grey; }
 
 /*# sourceMappingURL=app.component.css.map */
