--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
     placeholder="What needs to be done?" 
     autofocus="" 
     [(ngModel)]="newTodo.title" 
-    (keyup.enter)="addTodo()">
+    (keyup.enter)="addTodo() || log()">
     <button 
-    (click)="addTodo()">
+    (click)="addTodo() || log()">
     <i class="glyphicon glyphicon-plus"></i>
     </button>
     </section>
@@ -28,17 +28,21 @@
           type="checkbox" 
           (click)="toggleTodoComplete(todo)" 
           [checked]="todo.complete"
-          
                 >
-          <label>{{todo.id}}. {{todo.title}}</label>
+          <label class="todo-content">{{todo.id}}. {{todo.title }}</label>
           <button 
           class="destroy glyphicon glyphicon-remove-sign" 
-          (click)="removeTodo(todo)"></button>
+          (click)="removeTodo(todo) || log()"></button>
         </div>
       </li>
     </ul>
   </section>
   <footer class="todo-footer" *ngIf="todos.length > 0">
+    <div class="sorting">
+      <button (click)="numberSort() || log()">Sort by number</button>
+      <button (click)="nameSort() || log()">Sort by name</button>
+    </div>
+    <button (click)="removeCompeleted() || log()">Remove comleted</button>
     <span 
     class="todo-count">
     <strong>{{todos.length}}</strong> 
