--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,100 +1,132 @@
-.wrap{
-    display: flex;
-   justify-content: center;
-    text-align: center;
-    padding-top: 7vw;
-    .todo{
-        flex-basis: 30vw;
-&-header{
-    text-transform: uppercase;
-    padding: 0.1vw;
-    border-radius: 10px 10px 0 0;
-    box-shadow: 0 0 10px #cccccc;
-    background-image:linear-gradient(to top,rgb(39,128,231),rgb(71,152,234));
-    h1{
+.wrap {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 7vw;
+  .todo {
+    flex-basis: 30vw;
+    &-header {
+      text-transform: uppercase;
+      padding: 0.1vw;
+      border-radius: 10px 10px 0 0;
+      box-shadow: 0 0 10px #cccccc;
+      background-image: linear-gradient(to top, rgb(39, 128, 231), rgb(71, 152, 234));
+      h1 {
         font-size: 3rem;
+      }
     }
-}
-    &-input{
-    display: flex;
-    justify-content: space-around;
-    .new-todo{
+    &-input {
+      display: flex;
+      justify-content: space-around;
+      .new-todo {
         flex-grow: 1;
-        background: transparent;
         border: none;
         background: white;
         margin: 1vw;
         padding: 0 .5vw;
-    }
-    button{
-    background: none;
-    border: none;
-    flex-basis: 25px;
-    flex-grow: 0;
-    color: lighten(#2780e7,30%);;
-    font-size: 18px;
-    padding-right: 20px;
-    text-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
-      &:hover{
-        color: lighten(#2780e7,50%);
-        cursor: pointer;
-        transform: scale(1.2);
       }
- }
-    }
-
-    &-main{
-        background-color: white;
-       &-list{
-            list-style-type: none;
-             padding:0;
-             margin-bottom: 0;
-           li{
-               .view{
-                height:30px;
-                border-bottom: 1px solid #cccccc;
-                display: flex;
-                align-items: stretch;
-                justify-content: space-between;
-      .toggle{
-        flex-grow: 0;
-        flex-basis: 40px;
-        align-self: center;
-        margin: 0 1vw;
-      }
-      label{
-          flex-grow: 1;
-          text-align: left;
-      }
-      .destroy{
-        flex-basis: 35px;
-        flex-grow: 0;
-        align-self: center;
-        color:#2780e7;
-        border: none;
+      button {
         background: none;
-        margin: 0 1vw;
-        &:hover{
-          color:red;
+        border: none;
+        flex-basis: 25px;
+        flex-grow: 0;
+        color: lighten(#2780e7, 30%);;
+        font-size: 18px;
+        padding-right: 20px;
+        text-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
+        
+        &:hover {
+          color: lighten(#2780e7, 50%);
           cursor: pointer;
-          transform: scale(1.3);
+          transform: scale(1.2);
         }
       }
-      }
-     
-      }
-       .completed{
-         label{
+    }
+
+    &-main {
+      background-color: white;
+      &-list {
+        list-style-type: none;
+        padding: 0;
+        margin-bottom: 0;
+        li {
+          .view {
+            height: 30px;
+            border-bottom: 1px solid #cccccc;
+            display: flex;
+            align-items: stretch;
+            justify-content: space-between;
+            .toggle {
+              flex-grow: 0;
+              flex-basis: 40px;
+              align-self: center;
+              margin: 0 1vw;
+            }
+            .todo-content {
+              flex-grow: 1;
+              text-align: left;
+            }
+            .destroy {
+              flex-basis: 35px;
+              flex-grow: 0;
+              align-self: center;
+              color: #2780e7;
+              border: none;
+              background: none;
+              margin: 0 1vw;
+              &:hover {
+                color: red;
+                cursor: pointer;
+                transform: scale(1.3);
+              }
+            }
+          }
+
+        }
+        .completed {
+          label {
             text-decoration: line-through;
-            color: darken(#cccccc,25%);
+            color: darken(#cccccc, 25%);
             pointer-events: none;
-      } 
+          }
+        }
       }
-       }
     }
-    &-footer{
-        background-color: lighten(grey,40%);
-    padding: .25vw;
+    &-footer {
+      background-color: lighten(grey, 40%);
+      padding:  0;
+      .sorting {
+        display: flex;
+        justify-content: center;
+        button {
+          width: 50%;
+          padding: 0;
+          margin: 0;
+          border: none;
+          background: transparent;
+          border-right: 1px solid grey;
+          border-bottom: 1px solid grey;
+          margin: -1px;
+          &:hover {
+            background-color: grey;
+          }
+          &:last-of-type{
+              border-right: none;
+          }
+        }
+
+      }
+      button {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        border: none;
+        background: transparent;
+        border-bottom: 1px solid grey;
+        &:hover {
+          background-color: grey;
+        }
+      }
     }
-    }
+  }
 }
