Improved sort logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,35 @@
 <div class="wrap">
-<section class="todo">
-  <header class="todo-header">
-    <h1>:: to do list ::</h1>
-    <section class="todo-input">
-    <input 
-    class="new-todo" 
-    placeholder="What needs to be done?" 
-    autofocus="" 
-    [(ngModel)]="newTodo.title" 
-    (keyup.enter)="addTodo() || log()">
-    <button 
-    (click)="addTodo() || log()">
+  <section class="todo">
+    <header class="todo-header">
+      <h1>:: to do list ::</h1>
+      <section class="todo-input">
+        <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo() ; log();">
+        <button (click)="addTodo() ; log();">
     <i class="glyphicon glyphicon-plus"></i>
     </button>
+      </section>
+    </header>
+    <section class="todo-main" *ngIf="todos.length > 0">
+      <ul class="todo-main-list">
+        <li *ngFor="let todo of todos" [class.completed]="todo.complete">
+          <div class="view">
+            <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
+            <label class="todo-content">Task№{{todo.id}}: {{todo.title }}</label>
+            <button class="destroy glyphicon glyphicon-remove-sign" (click)="removeTodo(todo) ; log();"></button>
+          </div>
+        </li>
+      </ul>
     </section>
-  </header>
-  <section 
-  class="todo-main" 
-  *ngIf="todos.length > 0">
-    <ul class="todo-main-list">
-      <li 
-      *ngFor="let todo of todos" 
-      [class.completed]="todo.complete">
-        <div class="view">
-          <input 
-          class="toggle" 
-          type="checkbox" 
-          (click)="toggleTodoComplete(todo)" 
-          [checked]="todo.complete"
-                >
-          <label class="todo-content">Task №{{todo.id}} : {{todo.title }}</label>
-          <button 
-          class="destroy glyphicon glyphicon-remove-sign" 
-          (click)="removeTodo(todo) || log()"></button>
-        </div>
-      </li>
-    </ul>
-  </section>
-  <footer class="todo-footer" *ngIf="todos.length > 0">
-    <div class="sorting">
-      <button (click)="numberSort() || log()">Sort by number</button>
-      <button (click)="nameSort() || log()">Sort by name</button>
-    </div>
-    <button (click)="removeCompeleted() || log()">Remove comleted</button>
-    <span 
-    class="todo-count">
+    <footer class="todo-footer" *ngIf="todos.length > 0">
+      <div class="sorting">
+        <button (click)="numberSort() ; log();">Sort by number</button>
+        <button (click)="nameSort() ; log();">Sort by name</button>
+      </div>
+      <button (click)="removeCompeleted() ; log();">Remove comleted</button>
+      <span class="todo-count">
     <strong>{{todos.length}}</strong> 
     {{todos.length == 1 ? 'item' : 'items'}} left
     </span>
-  </footer>
-</section>
+    </footer>
+  </section>
 </div>
